tests/ui/dyn-compatibility/missing-assoc-type.stderr
error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/missing-assoc-type.rs:5:16
   |
LL | fn bar(x: &dyn Foo) {}
   |                ^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/missing-assoc-type.rs:2:10
   |
LL | trait Foo {
   |       --- this trait is not dyn compatible...
LL |     type Bar<T>;
   |          ^^^ ...because it contains the generic associated type `Bar`
   = help: consider moving `Bar` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
